fix youtube list width on mobile

--- a/memoMaker/src/components/youtube/youtube_item/youtube_item.module.css
+++ b/memoMaker/src/components/youtube/youtube_item/youtube_item.module.css
@@ -26,39 +26,32 @@
 }
 
 .thumbnail {
-  width: 40%;
+  flex-basis: 30%;
   height: 100%;
 }
 
 .metadata {
-  margin-left: 0.2em;
+  margin-left: 0.4em;
+  flex-basis: auto;
 }
 
-.title,
-.channel {
+.title {
   margin: 0;
   font-size: 0.8rem;
 }
 
-.channel {
-  font-size: 0.6rem;
-}
-
 @media screen and (max-width: 62rem) {
   .thumbnail {
-    width: 35%;
+    width: 32vw;
   }
 
   .metadata {
-    width: 65%;
+    width: 68vw;
   }
   .title {
-    white-space: nowrap;
+    /* white-space: nowrap; */
     text-overflow: ellipsis;
     overflow: hidden;
-  }
-  .channel {
-    display: none;
   }
 
   .container.grid {
